BA JLink Plugin use tools from default toolchain
Also, workaround a JPMS issue when using JDK 16